@@ -38,6 +38,8 @@
 <p>2019-02-21  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/mpc.c (ReadMPCImage): Tally directory length to avoid
+death by strlen().</li>
 <li>coders/miff.c (ReadMIFFImage): Tally directory length to avoid
 death by strlen().  Fixes oss-fuzz 13190
 &quot;graphicsmagick/coder_MIFF_fuzzer: Timeout in
